--- a/_posts/projects/2015-02-01-lestands.md
+++ b/_posts/projects/2015-02-01-lestands.md
@@ -3,8 +3,11 @@ layout: portfolio_entry
 title: le Stands
 description: "Web app for helping actvists track literature distribution through free newspaper stands."
 images:
-- lestands-sm.png
-thumbnail: lestands-sm.png
+- lestands/lestands-1.png
+- lestands/lestands-2.png
+- lestands/lestands-3.png
+- lestands/lestands-4.png
+thumbnail: lestands/lestands-sm.png
 categories:
 - projects
 
@@ -13,13 +16,15 @@ categories:
 
 ## A Literature Tracking System for Newsracks
 
+**leStands** is an app to track literature distributed through free literature stands. Activists & volunteers use the app when restocking a stand. A program administrator can then see a dashboard with statistics and other information about how the stands are performing.
+
+![](/assets/img/projects/lestands/lestands-walkthrough.gif "Animated walkthrough of lestands")
+
+## Designed for The Humane League
+leStands is used by The Humane League, a national animal protection non-profit with offices in cities across the US. Humane League advocate for animals who are raised for food. In a handful of cities they have plastic newsracks placed throughout the downtown and each week a volunteer or staff person stock them with magazines. leStands allows their staff to use their smartphone to record how many magazines they added to stands. Then managers can look at overviews and identify trends so that they can make strategic decisions about how often to check the stands, when to relocate stands, and how effective their outreach has been.
+
 ## Background
-The Humane League is a national animal protection non-profit with offices in cities across the US. Through outreach events, presentations in high schools, handing out leaflets at colleges, and through online campaigns they advocate for animals who are raised for food. In most of the cities where they have offices, their staff run free literature stands. They have these plastic newsracks placed throughout the downtown area of cities and each week they stock them with magazines. leStands is a responsive web application that allows volunteers to record updates to the stands from their smart phones. Then managers can look at overviews and trends so that they can make strategic decisions about how often to check the stands, when to relocate stands, and how effective their outreach has been.
-
-I've managed a literature stands program like this when I lived in DC and briefly when I was in Massachusetts. I believe that they are an effective way to reach a large number of people, but it never feels that way when you're restocking the stands. Sometimes it's raining or snowing and you'll trudge out to these stands to find an empty and sometimes covered in graffiti or stickers. You would never meet the people who took the magazines and never hear whether or not the magazines had any impact on them. So you fill up the stand and hope people are reading them. I was curious how to optimize this program so started keeping track of how many magazines each stand distributes. At first, it was just a spreadsheet. Some columns for stand name, amount of magazines added, date, etc. At first I would take a sheet of paper with me and jot down notes about each stand when I went out to check on them: 200 added to the stand outside of Tortilla Sam's, 100 added to the one near Da Lat, etc. By the time I got home, it was pretty common that I would have lost the scrap of paper and couldn't enter it to my spreadsheet. So I made a web application for this.
-
-## What is leStands?
-leStands is an app that you use on your phone to track literature distribution through free literature stands. After you restock a stand, you add an update to the app. You (or a program administrator) can then see a dashboard with statistics and other information about how the stands are performing. You can look at data and make strategic decisions about the program. Should you add more stands? Has a stand plateau'ed? Is it time to move the stand to a new location? How often should we be sending volunteers or staff people out to check the stand? Weekly? Every two weeks? Monthly? How many magazines did we distribute in any given month? It also allows a program manager to run experiments compare the rate at which people take one magazine cover vs another. For example, you can have 5 stands with a magazine that has a blue cover and 5 stands with a magazine with a green cover. Which one is someone more willing to take? Is there any significant difference? It's a kind of AB testing of magazines covers.
+I've managed a literature stands program like this when I lived in DC and briefly when I was in Massachusetts. I believe that they are an effective way to reach a large number of people, but it never feels that way when you're restocking the stands. Sometimes it's raining or snowing and I would trudge out to these stands to find it empty and sometimes covered in graffiti or stickers. You never meet the people who took the magazines and never hear whether or not the magazines had any impact on them. So you fill up the stand and hope people are reading them. I was curious how to optimize this program so started keeping track of how many magazines each stand distributes. At first, it was just a spreadsheet. Some columns for stand name, amount of magazines added, date, etc. I would take a sheet of paper with me and jot down notes about each stand when I went out to check on them: 200 added to the stand outside of Tortilla Sam's, 100 added to the one near Da Lat, etc. By the time I got home, it was pretty common that I would have lost the scrap of paper and couldn't enter it to my spreadsheet. I wanted to use my phone to record these updates, so I made leStands.
 
 ## Current Status: Pilot version in Charlotte
 leStands is currently being tested in Charlotte, NC with 35 stands. We're gathering feedback and data on the application to see if it's something that could be useful in other places as well.
