--- a/_posts/projects/2015-02-01-lestands.md
+++ b/_posts/projects/2015-02-01-lestands.md
@@ -21,7 +21,7 @@ categories:
 ![](/assets/img/projects/lestands/lestands-walkthrough-screen.gif "Animated walkthrough of lestands")
 
 ## Designed for The Humane League
-leStands is used by The Humane League, a national animal protection non-profit with offices in cities across the US. Humane League advocate for animals who are raised for food. In a handful of cities they have plastic newsracks placed throughout the downtown and each week a volunteer or staff person stock them with magazines. leStands allows their staff to use their smartphone to record how many magazines they added to stands. Then managers can look at overviews and identify trends so that they can make strategic decisions about how often to check the stands, when to relocate stands, and how effective their outreach has been.
+A national non-profit with offices in cities across the country, The Humane League advocates for animals who are raised in factory farms. They use free plastic newsracks placed throughout the downtown as a an outreach tool. Each week a volunteer or staff person stock the stands with magazines. **leStands** allows their staff to use their smartphone to record how many magazines they added to stands. The app also always program managers to see an overview of the program and identify trends, so that they can make strategic decisions about how often to check the stands, when to relocate stands, and measure the effectiveness of the project.
 
 ## Background
 I've managed a literature stands program like this when I lived in DC and briefly when I was in Massachusetts. I believe that they are an effective way to reach a large number of people, but it never feels that way when you're restocking the stands. Sometimes it's raining or snowing and I would trudge out to these stands to find it empty and sometimes covered in graffiti or stickers. You never meet the people who took the magazines and never hear whether or not the magazines had any impact on them. So you fill up the stand and hope people are reading them. I was curious how to optimize this program so started keeping track of how many magazines each stand distributes. At first, it was just a spreadsheet. Some columns for stand name, amount of magazines added, date, etc. I would take a sheet of paper with me and jot down notes about each stand when I went out to check on them: 200 added to the stand outside of Tortilla Sam's, 100 added to the one near Da Lat, etc. By the time I got home, it was pretty common that I would have lost the scrap of paper and couldn't enter it to my spreadsheet. I wanted to use my phone to record these updates, so I made leStands.
