--- a/_posts/projects/2015-02-01-lestands.md
+++ b/_posts/projects/2015-02-01-lestands.md
@@ -1,6 +1,6 @@
 ---
 layout: portfolio_entry
-title: le Stands
+title: leStands
 description: "Web app for helping actvists track literature distribution through free newspaper stands."
 images:
 - lestands/lestands-1.png
@@ -21,13 +21,13 @@ categories:
 ![](/assets/img/projects/lestands/lestands-walkthrough-screen.gif "Animated walkthrough of lestands")
 
 ## Designed for The Humane League
-A national non-profit with offices in cities across the country, The Humane League advocates for animals who are raised in factory farms. They use free plastic newsracks placed throughout the downtown as a an outreach tool. Each week a volunteer or staff person stock the stands with magazines. **leStands** allows their staff to use their smartphone to record how many magazines they added to stands. The app also always program managers to see an overview of the program and identify trends, so that they can make strategic decisions about how often to check the stands, when to relocate stands, and measure the effectiveness of the project.
+A national non-profit with offices in cities across the country, The Humane League advocates for animals who are raised in factory farms. They use free plastic newsracks placed throughout the downtown as a an outreach tool. Each week a volunteer or staff person stock the stands with magazines. **leStands** allows their staff to use their smartphone to record how many magazines they add to stands. The app enables a program manager to use data to know when to check or relocated a stand and to measure effectiveness of the program.
 
 ## Background
-I've managed a literature stands program like this when I lived in DC and briefly when I was in Massachusetts. I believe that they are an effective way to reach a large number of people, but it never feels that way when you're restocking the stands. Sometimes it's raining or snowing and I would trudge out to these stands to find it empty and sometimes covered in graffiti or stickers. You never meet the people who took the magazines and never hear whether or not the magazines had any impact on them. So you fill up the stand and hope people are reading them. I was curious how to optimize this program so started keeping track of how many magazines each stand distributes. At first, it was just a spreadsheet. Some columns for stand name, amount of magazines added, date, etc. I would take a sheet of paper with me and jot down notes about each stand when I went out to check on them: 200 added to the stand outside of Tortilla Sam's, 100 added to the one near Da Lat, etc. By the time I got home, it was pretty common that I would have lost the scrap of paper and couldn't enter it to my spreadsheet. I wanted to use my phone to record these updates, so I made leStands.
+I've managed a literature stands program like this in DC & Massachusetts. I believe that they are an effective way to reach a large number of people, but I didn't feel that that way when I was restocking the stands. I was curious how to optimize this program so I started by keeping track of how many magazines each stand distributes. At first I was writing notes down on scraps paper and adding them to a spreadsheet, but it was easy to lose the paper or make mistakes. I wanted to way to use my smartphone to record these updates, so I made leStands.
 
 ## Current Status: Pilot version in Charlotte
-leStands is currently being tested in Charlotte, NC with 35 stands. We're gathering feedback and data on the application to see if it's something that could be useful in other places as well.
+leStands is currently being tested in Charlotte, NC with 35 stands. We are gathering feedback and data on the application to see if it is something that could be useful in other places as well.
 
 
 ## Tools used
