edits to tryveg

--- a/_posts/projects/2015-01-01-tryveg.md
+++ b/_posts/projects/2015-01-01-tryveg.md
@@ -11,7 +11,7 @@ categories:
 - projects
 ---
 
-This pro-vegetarian campaign website is one of Compassion Over Killing's main web properties. The site has been mentioned on MTV, ads have run for it on Hulu, and it has been mentioned many times in media outlets.
+This pro-vegetarian campaign website is one of Compassion Over Killing's main web properties. While working as director of tech at Compassion Over Killing, I redesigned and rebuilt this website. The site has been mentioned on MTV, ads have run for it on Hulu, and it has been mentioned many times by media outlets.
 
 ## Tools used
 Bootstrap, PHP, Wordpress, JavaScript, jQuery.
