--- a/_posts/projects/2015-10-01-internet2016.md
+++ b/_posts/projects/2015-10-01-internet2016.md
@@ -21,3 +21,5 @@ categories:
 ---
 
 [Internet2016]({{page.link}}) is a grassroots campaign to mobilize people who care about the future of the Internet.
+
+As a Ford/Mozilla Open Web Fellow, I designed and laser-cut stencils, made campaign signs, built the website and worked with organizers at Free Press plan this campaign.
