--- a/_posts/projects/2015-10-01-internet2016.md
+++ b/_posts/projects/2015-10-01-internet2016.md
@@ -16,7 +16,7 @@ images:
 thumbnail: internet2016/internet2016-button-at-rally-sm.jpg
 categories:
  - projects
- - featuredprojects
+featured: true
 
 ---
 
